style.css
/* -----------------------------
   Pixelated Scroll Transition
----------------------------- */
[data-pixelated-scroll-panel] {
  display: flex;
  flex-direction: row;
  width: 100%;
}

[data-pixelated-scroll-column] {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: stretch;
  flex: 1 1 0%;
  min-width: 0;
}
  
[data-pixelated-scroll-pixel] {
  flex: 1;
  width: 100%;
  background-color: currentColor;
  backface-visibility: hidden;
  will-change: opacity;
}

[data-pixelated-scroll-transition][data-mode="reveal"] {
  inset: 0% 0% auto;
}

[data-pixelated-scroll-transition][data-pixel-ratio="2.5/1"] [data-pixelated-scroll-pixel] {
  aspect-ratio: 2.5/1;
}

.pixelated-scroll__container {
  position: relative;
}

.pixelated-scroll__section {
  position: sticky;
  top: 0;
}

.section_logo {
  position: relative;
  z-index: 1;
  margin-top: -100vh;
}

/* ----------------------------
   Image Trail Following Cursor
----------------------------- */
.trail-wrap { pointer-events: none; }

